--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@erc7824/nitrolite": "^0.3.0",
     "@metamask/detect-provider": "^2.0.0",
+    "@openzeppelin/contracts": "^5.4.0",
     "axios": "^1.6.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
